# data-platform-workflows

./: .gitignore  CODEOWNERS  CONTRIBUTING.md  README.md  TROUBLESHOOTING_CHARMS.md  _check_semantic_version_prefix.py  _get_release_semantic_version.py  collect_charms.py  release_charm.py  update_bundle.py
.github/: .jira_sync_config.yaml  CODEOWNERS  actionlint.yaml  renovate.json5  zizmor.yaml
.github/workflows/: __check_pr.yaml  __check_pr_title.yaml  __lint.yaml  __release.yaml  __sync_issue_to_jira.yaml  _get_workflow_version.yaml  _get_workflow_version_self_hosted.yaml  _mirror_charm.md  _mirror_charm.yaml  _promote_charm.md  _promote_charm.yaml  _promote_charm_legacy.md  _promote_charm_legacy.yaml  _promote_charm_legacy_1.md  _promote_charm_legacy_1.yaml  _promote_charm_legacy_2.md  _promote_charm_legacy_2.yaml  _promote_charms.md  _promote_charms.yaml  _promote_charms_by_revision.md  _promote_charms_by_revision.yaml  _promote_charms_legacy.md  _promote_charms_legacy.yaml  _promote_charms_legacy_1.md  _promote_charms_legacy_1.yaml  _promote_charms_legacy_2.md  _promote_charms_legacy_2.yaml  _promote_charms_to_candidate.yaml  _promote_charms_to_stable.yaml  _sync_docs.md  _sync_docs.yaml  _sync_docs_v2.md  _sync_docs_v2.yaml  _update_bundle.md  _update_bundle.yaml  allure_report.yaml  approve_renovate_pr.md  approve_renovate_pr.yaml  build-charms-with-cache.yaml  build_charm.md  (+67 more)
_cli/: pyproject.toml
_cli/data_platform_workflows_cli/: check_charm_contains_valid_refresh_version.py  check_semantic_version_prefix.py  compute_path_in_artifact.py  create_charm_refresh_version_tag_edge.py  create_semantic_version_tag.py  parse_snap_version.py  redact_secrets.py  update_bundle.py
_cli/data_platform_workflows_cli/craft_tools/: collect_platforms.py  promote.py  promote_legacy.py  promote_legacy_1.py  promote_legacy_2.py  release.py
_cli/data_platform_workflows_cli/github_actions/: __init__.py
_cli/data_platform_workflows_cli/static/: data_platform_usernames
python/cli/: README.md  pyproject.toml
python/cli/cli/: collect_charms.py  update_bundle.py
python/cli/data_platform_workflows_cli/: add_ssh_keys.py  allure_add_default_for_missing_results.py  announce_candidate.py  check_labels.py  collect_charm_bases.py  collect_charms.py  compute_path_in_artifact.py  convert_logsink_to_debug_log.py  create_charm_refresh_version_tag_edge.py  create_semantic_version_tag.py  determine_semantic_version_tag.py  download_discourse_topics.py  generate_snaps_yaml.py  get_pack_command.py  parse_snap_version.py  redact_secrets.py  release_charm.py  replace_invalid_artifact_characters.py  sync_docs.py  sync_docs_v2.py  tee_log_for_all_models.py  update_bundle.py
python/cli/data_platform_workflows_cli/craft_tools/: charmcraft_platforms.py  collect_bases.py  collect_platforms.py  craft.py  promote.py  release.py  release_charm.py
python/cli/data_platform_workflows_cli/github_actions/: __init__.py
python/cli/tests/: test_update_bundle.py
python/pytest_plugins/allure_pytest_collection_report/: README.md  pyproject.toml
python/pytest_plugins/allure_pytest_collection_report/allure_pytest_collection_report/: _plugin.py
python/pytest_plugins/github_secrets/: README.md  pyproject.toml
python/pytest_plugins/github_secrets/github_secrets/: plugin.py
python/pytest_plugins/github_secrets/pytest_github_secrets/: _plugin.py
python/pytest_plugins/microceph/: README.md  pyproject.toml
python/pytest_plugins/microceph/pytest_microceph/: __init__.py  _plugin.py
python/pytest_plugins/pytest_operator_cache/: README.md  deprecation_notice.md  pyproject.toml
python/pytest_plugins/pytest_operator_cache/pytest_operator_cache/: _plugin.py  plugin.py
python/pytest_plugins/pytest_operator_groups/: README.md  pyproject.toml
python/pytest_plugins/pytest_operator_groups/pytest_operator_groups/: _plugin.py  plugin.py
