[tool.poetry]
name = "pytest-github-secrets"
# Version unused; repository has its own versioning system. (See .github/workflows/__release.yaml)
version = "0.1.0"
description = ""
authors = ["Carl Csaposs <carl.csaposs@canonical.com>"]
readme = "README.md"
classifiers = [
    "Framework :: Pytest",
]

[tool.poetry.plugins."pytest11"]
github_secrets = "pytest_github_secrets._plugin"

[tool.poetry.dependencies]
python = ">=3.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
